fix(exec): switch to ProcessBuilder, fix environment for Windows commands